suite/tests/switch/valid/simple.c
int main(void)
{
   int a = 1;

   switch (a) {
	case 0: return 0;
	case 1: return 1;
	default: return 2;
   }
}

