suite/tests/switch/invalid/case-outside-switch.c
int main(void)
{
    switch (1) {
	case 1: return 0;
    }

	case 2: return 5;
	
}
